--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
 
     <div id="corkboard-wrapper">
         <div id="corkboard">
-            this is the corkboard
+            <p>this is the corkboard</p>
+            <img id="space-guy" src="img/space-guy.jpg" alt="space-boy">
         </div>
         <button id="shuffle-button">shuffle corkboard</button>
     </div>
