corkboard pics & css

--- a/index.html
+++ b/index.html
@@ -43,7 +43,13 @@
     <div id="corkboard-wrapper">
         <div id="corkboard">
             <p>this is the corkboard</p>
-            <img id="space-guy" src="img/space-guy.png" alt="space-boy">
+            <img id="bus-pass" src="img/bus-pass.png" alt="montebello-bus">
+            <img id="participation-ribbon" src="img/participation-ribbon.png" alt="participation">
+            <img id="concert-polaroid" src="img/concert-polaroid.png" alt="lollapalooza">
+            <img id="queer-prom" src="img/queer-prom-ticket.png" alt="prom-ticket">
+            <img id="ballot-ticket" src="img/ballot-ticket.png" alt="democratic-ticket">
+
+
         </div>
         <button id="shuffle-button">shuffle corkboard</button>
     </div>
