commented out dragging functionality in js (and cropped some of the pngs)

--- a/index.html
+++ b/index.html
@@ -44,11 +44,10 @@
         <div id="corkboard">
             <p>this is the corkboard</p>
             <div><img id="bus-pass" src="img/bus-pass.png" alt="montebello-bus"></div>
-            <!--<div><img id="participation-ribbon" src="img/participation-ribbon.png" alt="participation"></div>
+            <div><img id="participation-ribbon" src="img/participation-ribbon.png" alt="participation"></div>
             <div><img id="concert-polaroid" src="img/concert-polaroid.png" alt="lollapalooza"></div>
             <div><img id="queer-prom" src="img/queer-prom-ticket.png" alt="prom-ticket"></div>
             <div><img id="ballot-ticket" src="img/ballot-ticket.png" alt="democratic-ticket"></div>
-!-->
 
         </div>
         <button id="shuffle-button">shuffle corkboard</button>
