--- a/index.html
+++ b/index.html
@@ -52,7 +52,8 @@
             <div><img id="participation-ribbon" src="img/participation-ribbon.png" alt="participation"></div>
             <div><img id="concert-polaroid" src="img/concert-polaroid.png" alt="lollapalooza"></div>
             <div><img id="queer-prom" src="img/queer-prom-ticket.png" alt="prom-ticket"></div>
-
+            <div><img id="lacma-ticket" src="img/LACMA-ticket.png" alt="lacma"></div>
+            <div><img id="kewpie-moth" src="img/kewpie-moth.png" alt="kewpie-sticker"></div>
         </div>
         <button id="shuffle-button">shuffle corkboard</button>
     </div>
