added volume slider (doesnt work tho)

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <!-- title of webpage -->
-    <title>snack shack</title>
+    <title>Snack Shack!</title>
 	<!-- Use UTF character set, a good idea with any webpage -->
   	<meta charset="UTF-8" />
 	<!-- Set viewport so page remains consistently scaled w narrow devices -->
@@ -25,7 +25,7 @@
             <div id="title-wrapper">
                 <img id="logo" src="img/logo.png">
                 <div class="column-wrapper">
-                    <p>ART101 GROUP 16</p>
+                    <p>ART101 GROUP 16: GLAMP</p>
                     <p>Grace, Maya, Philip, Ashley, & Lyssa</p>
                 </div>
             </div>
