playlist-loading update

--- a/index.html
+++ b/index.html
@@ -25,16 +25,17 @@
             <div id="title-wrapper">
                 <img id="logo" src="img/logo.png">
                 <div class="column-wrapper">
-                    <p>ART101 GROUP 16: GLAMP</p>
-                    <p>Grace, Maya, Philip, Ashley, & Lyssa</p>
+                    <p>Locker Letters</p>
                 </div>
             </div>
 
-            <div class="current-playlist">
-                <p>select a record from the left to add music</p>
-            </div>
-            <div id="playlist-loading" style="display: none;">
-                <p>loading playlist...</p>
+            <div class="current-playlist-wrapper">
+                <div id="playlist-loading" style="display: none;">
+                    <p>loading playlist...</p>
+                </div>
+                <div class="current-playlist">
+                    <p>select a record from the left to add music</p>
+                </div>
             </div>
 
             <div class="disk grace-disk" data-p="grace">
