--- a/index.html
+++ b/index.html
@@ -20,6 +20,11 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Delicious+Handrawn:wght@400;700&display=swap">
 </head>
 <body>
+    <!-- will only appear when entering website -->
+    <div id="title-page">
+        <p>this is the title page, hello</p>
+    </div>
+
     <div id="sidebar">
         <div id="playlist-wrapper" class="row-wrapper">
             <div id="title-wrapper">
