--- a/index.html
+++ b/index.html
@@ -22,7 +22,15 @@
 <body>
     <!-- will only appear when entering website -->
     <div id="title-page">
-        <p>this is the title page, hello</p>
+        <h1>Locker Letters</h1>
+        <h2>created by: ashley huynh, grace galan, maya crolene, lyssa li, philip choe</h2>
+        <p id="intro">The internet has fundamentally changed the way human beings interact at an interpersonal level. Love was once found 
+            in the wild; at a grocery store, on the bus, or by meeting your friend’s boyfriend’s best friend at a dinner 
+            party. In the dawn of the age of the internet, we had anonymous forums posting personal ads detailing missed 
+            connections with beautiful strangers in passing or unrequited loves. Now we are resolved to the instant dopamine 
+            and game-like interface of dating apps. Long gone are the days of handwritten love letters shoved in lockers.. 
+            unless…</p>
+        <h3>(click anywhere to continue)</h3>
     </div>
 
     <div id="sidebar">
