tried fixing the disks

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 </div>
             </div>
 
-            <div class="current-playlist-wrapper">
+            <div class="spotify-embed-wrapper">
                 <div id="playlist-loading" style="display: none;">
                     <p>loading playlist...</p>
                 </div>
@@ -43,20 +43,23 @@
                 </div>
             </div>
 
-            <div class="disk grace-disk" data-p="grace">
-                <img class="disk-img" src="img/sample-disk.png"/>
-            </div>
-            <div class="disk maya-disk" data-p="maya">
-                <img class="disk-img" src="img/sample-disk.png"/>
-            </div>
-            <div class="disk philip-disk" data-p="philip">
-                <img class="disk-img" src="img/sample-disk.png"/>
-            </div>
-            <div class="disk ashley-disk" data-p="ashley">
-                <img class="disk-img" src="img/sample-disk.png"/>
-            </div>
-            <div class="disk lyssa-disk" data-p="lyssa">
-                <img class="disk-img" src="img/sample-disk.png"/>
+            <div class="disk-stack-wrapper">
+                <div class="current-playlist-text"></div>
+                <div class="disk grace-disk" data-p="grace">
+                    <img class="disk-img" src="img/sample-disk.png"/>
+                </div>
+                <div class="disk maya-disk" data-p="maya">
+                    <img class="disk-img" src="img/sample-disk.png"/>
+                </div>
+                <div class="disk philip-disk" data-p="philip">
+                    <img class="disk-img" src="img/sample-disk.png"/>
+                </div>
+                <div class="disk ashley-disk" data-p="ashley">
+                    <img class="disk-img" src="img/sample-disk.png"/>
+                </div>
+                <div class="disk lyssa-disk" data-p="lyssa">
+                    <img class="disk-img" src="img/sample-disk.png"/>
+                </div>
             </div>
         </div>
         <div id="bottom-sidebar-wrapper" class="row-wrapper">
