--- a/index.html
+++ b/index.html
@@ -81,26 +81,39 @@
     <div id="corkboard-wrapper">
         <div id="corkboard">
     <!-- From here down are Grace's collage divs! -->
-            <div><img id="bus-pass" src="img/bus-pass.png" alt="montebello-bus"></div>
-            <div><img id="participation-ribbon" src="img/participation-ribbon.png" alt="participation"></div>
-            <div><img id="concert-polaroid" src="img/concert-polaroid.png" alt="lollapalooza"></div>
-            <div><img id="queer-prom" src="img/queer-prom-ticket.png" alt="prom-ticket"></div>
-            <div><img id="lacma-ticket" src="img/LACMA-ticket.png" alt="lacma"></div>
-            <div><img id="kewpie-moth" src="img/kewpie-moth.png" alt="kewpie-sticker"></div>
+            <div class="grace-corkboard corkboard-des current-corkboard-des">
+                <img id="bus-pass" src="img/bus-pass.png" alt="montebello-bus">
+                <img id="participation-ribbon" src="img/participation-ribbon.png" alt="participation">
+                <img id="concert-polaroid" src="img/concert-polaroid.png" alt="lollapalooza">
+                <img id="queer-prom" src="img/queer-prom-ticket.png" alt="prom-ticket">
+                <img id="lacma-ticket" src="img/LACMA-ticket.png" alt="lacma">
+                <img id="kewpie-moth" src="img/kewpie-moth.png" alt="kewpie-sticker">
+            </div>
     <!-- From here down are Maya's collage divs! -->
-            <div><img id="round-roses" src="img/maya-images/round-roses.png" alt="bowrose"></div>
-            <div><img id="yellow-butterfly" src="img/maya-images/yellow-butterfly.png" alt="butterflyone"></div>
-            <div><img id="blue-angel" src="img/maya-images/blue-angel.png" alt="angelone"></div>
-            <div><img id="heart" src="img/maya-images/heart.png" alt="angelheart"></div>
-            <div><img id="dove-rose" src="img/maya-images/dove-rose.png" alt="dovetwo"></div>
-            <div><img id="fan" src="img/maya-images/fan.png" alt="goldfan"></div>
-            <div><img id="pink-angel" src="img/maya-images/pink-angel.png" alt="angeltwo"></div>
-            <div><img id="rose" src="img/maya-images/rose.png" alt="pinkrose"></div>
-            <div><img id="sweetheart" src="img/maya-images/sweetheart.png" alt="sweetie"></div>
-            <div><img id="purple-flower" src="img/maya-images/purple-flower.png" alt="flower"></div>
-            <div><img id="blue-butterfly" src="img/maya-images/blue-butterfly.png" alt="butterflytwo"></div>
-            <div><img id="lily" src="img/maya-images/lily.png" alt="flowerlily"></div>
-            <div><img id="dove" src="img/maya-images/dove.png" alt="doveone"></div>
+            <div class="maya-corkboard corkboard-des">
+                <img id="round-roses" src="img/maya-images/round-roses.png" alt="bowrose">
+                <img id="yellow-butterfly" src="img/maya-images/yellow-butterfly.png" alt="butterflyone">
+                <img id="blue-angel" src="img/maya-images/blue-angel.png" alt="angelone">
+                <img id="heart" src="img/maya-images/heart.png" alt="angelheart">
+                <img id="dove-rose" src="img/maya-images/dove-rose.png" alt="dovetwo">
+                <img id="fan" src="img/maya-images/fan.png" alt="goldfan">
+                <img id="pink-angel" src="img/maya-images/pink-angel.png" alt="angeltwo">
+                <img id="rose" src="img/maya-images/rose.png" alt="pinkrose">
+                <img id="sweetheart" src="img/maya-images/sweetheart.png" alt="sweetie">
+                <img id="purple-flower" src="img/maya-images/purple-flower.png" alt="flower">
+                <img id="blue-butterfly" src="img/maya-images/blue-butterfly.png" alt="butterflytwo">
+                <img id="lily" src="img/maya-images/lily.png" alt="flowerlily">
+                <img id="dove" src="img/maya-images/dove.png" alt="doveone">
+            </div>
+    <!-- From here down are Philip's collage divs! -->
+            <div class="philip-corkboard corkboard-des">
+            </div>
+    <!-- From here down are Ashley's collage divs! -->
+            <div class="ashley-corkboard corkboard-des">
+            </div>
+    <!-- From here down are Lyssa's collage divs! -->
+            <div class="lyssa-corkboard corkboard-des">
+            </div>
         </div>
         <button id="shuffle-button">get new responses</button>
     </div>
