added cd's / adjusted logo / mod body.ashley

--- a/index.html
+++ b/index.html
@@ -54,19 +54,19 @@
             <div class="disk-stack-wrapper">
                 <div class="current-playlist-text"></div>
                 <div class="disk grace-disk" data-p="grace">
-                    <img class="disk-img" src="img/sample-disk.png"/>
+                    <img class="disk-img" src="img/disks/grace-disk.PNG"/>
                 </div>
                 <div class="disk maya-disk" data-p="maya">
-                    <img class="disk-img" src="img/sample-disk.png"/>
+                    <img class="disk-img" src="img/disks/maya-disk.PNG"/>
                 </div>
                 <div class="disk philip-disk" data-p="philip">
-                    <img class="disk-img" src="img/sample-disk.png"/>
+                    <img class="disk-img" src="img/disks/philip-disk.PNG"/>
                 </div>
                 <div class="disk ashley-disk" data-p="ashley">
-                    <img class="disk-img" src="img/sample-disk.png"/>
+                    <img class="disk-img" src="img/disks/ashley-disk.PNG"/>
                 </div>
                 <div class="disk lyssa-disk" data-p="lyssa">
-                    <img class="disk-img" src="img/sample-disk.png"/>
+                    <img class="disk-img" src="img/disks/lyssa-disk.PNG"/>
                 </div>
             </div>
         </div>
