added confession img, made stickers vertical to fit better

--- a/index.html
+++ b/index.html
@@ -72,9 +72,13 @@
         </div>
         <div id="bottom-sidebar-wrapper" class="row-wrapper">
             <a href="https://docs.google.com/forms/d/e/1FAIpQLSft2eM6649vLK5VlEwA6BJR3h-Fe0mPaBiGBgRZjSopevvirg/viewform">
-                <div id="form-link"> insert sticky note image </div>
+                <div id="form-link"> 
+                    <img class="confession" src="img/stickersheet/confession-placeholder.png"/>
+                </div>
             </a>
-            <div id="sticker-sheet"></div>
+            <div id="sticker-sheet">
+                <img class="sticker-sheet" src="img/stickersheet/stickersheet.png"/>
+            </div>
         </div>
     </div>
 
