added philip corkboard placement (i should really sleep)

--- a/index.html
+++ b/index.html
@@ -111,6 +111,12 @@
             </div>
     <!-- From here down are Philip's collage divs! -->
             <div class="philip-corkboard corkboard-des">
+                <img id="bernie-sans" src="img/philip-images/bernie-sans.png"/>
+                <img id="thumbtack" src="img/philip-images/thumbtack1.png"/>
+                <img id="crane" src="img/philip-images/crane.png"/>
+                <img id="garf" src="img/philip-images/garf.png"/>
+                <img id="music" src="img/philip-images/music.png"/>
+                <img id="pen" src="img/philip-images/pen.png"/>
             </div>
     <!-- From here down are Ashley's collage divs! -->
             <div class="ashley-corkboard corkboard-des">
