--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
             </div>
         </div>
         <div id="bottom-sidebar-wrapper" class="row-wrapper">
-            <a href="https://docs.google.com/forms/d/e/1FAIpQLSft2eM6649vLK5VlEwA6BJR3h-Fe0mPaBiGBgRZjSopevvirg/viewform">
+            <a href="https://docs.google.com/forms/d/e/1FAIpQLSft2eM6649vLK5VlEwA6BJR3h-Fe0mPaBiGBgRZjSopevvirg/viewform" target="_new">
                 <div id="form-link"> 
                     <img class="confession" src="img/stickersheet/confession-placeholder.png"/>
                 </div>
@@ -124,8 +124,9 @@
     <!-- From here down are Lyssa's collage divs! -->
             <div class="lyssa-corkboard corkboard-des">
             </div>
+    <!-- corkboard shuffle responses button -->
+            <button id="shuffle-button">get new responses</button>
         </div>
-        <button id="shuffle-button">get new responses</button>
     </div>
 </body>
 </html>
