--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<!-- Lab-specifc CSS file for any special styling of this particular page -->
 	<link rel="stylesheet" type="text/css" href="css/color.css">
+	<link rel="stylesheet" type="text/css" href="css/corkboard.css">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<!-- load jQuery library to make javascript easier (must be above our lab js)-->
 	<script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
