sticker click and drag (friend helping me out a lot)

--- a/index.html
+++ b/index.html
@@ -79,6 +79,10 @@
             </a>
             <div id="sticker-sheet">
                 <img class="sticker-sheet" src="img/stickersheet/stickersheet.png"/>
+                <div class="sticker" id="sticker1"></div>
+                <div class="sticker" id="sticker2"></div>
+                <div class="sticker" id="sticker3"></div>
+                <div class="sticker" id="sticker4"></div>
             </div>
         </div>
     </div>
@@ -113,7 +117,11 @@
     <!-- From here down are Philip's collage divs! -->
             <div class="philip-corkboard corkboard-des">
                 <img id="bernie-sans" src="img/philip-images/bernie-sans.png"/>
-                <img id="thumbtack" src="img/philip-images/thumbtack1.png"/>
+                <img id="thumbtack1" src="img/philip-images/thumbtack1.png"/>
+                <img id="thumbtack2" src="img/philip-images/thumbtack1.png"/>
+                <img id="thumbtack3" src="img/philip-images/thumbtack1.png"/>
+                <img id="thumbtack4" src="img/philip-images/thumbtack1.png"/>
+                <img id="thumbtack5" src="img/philip-images/thumbtack1.png"/>
                 <img id="crane" src="img/philip-images/crane.png"/>
                 <img id="garf" src="img/philip-images/garf.png"/>
                 <img id="music" src="img/philip-images/music.png"/>
