pop-up for shuffle button, need background picture

--- a/index.html
+++ b/index.html
@@ -134,7 +134,10 @@
             <div class="lyssa-corkboard corkboard-des">
             </div>
     <!-- corkboard shuffle responses button -->
-            <button id="shuffle-button">get new responses</button>
+            <div id="shuffle-button-wrapper">
+                <button id="shuffle-button">get new responses</button>
+                <div id="shuffle-button-pop-up">click the button to get a response</div>
+            </div>
         </div>
     </div>
 </body>
