--- a/index.html
+++ b/index.html
@@ -77,13 +77,13 @@
                     <img class="confession" src="img/stickersheet/confession-placeholder.png"/>
                 </div>
             </a>
-            <div id="sticker-sheet">
-                <img class="sticker-sheet" src="img/stickersheet/stickersheet.png"/>
+            <!--<div id="sticker-sheet">
                 <div class="sticker" id="sticker1"></div>
                 <div class="sticker" id="sticker2"></div>
                 <div class="sticker" id="sticker3"></div>
                 <div class="sticker" id="sticker4"></div>
-            </div>
+                <img class="sticker-sheet" src="img/stickersheet/stickersheet.png"/>
+            </div>!-->
         </div>
     </div>
 
