add ashley's cork pngs

--- a/index.html
+++ b/index.html
@@ -129,6 +129,15 @@
             </div>
     <!-- From here down are Ashley's collage divs! -->
             <div class="ashley-corkboard corkboard-des">
+                <img id="heart-note" src="img/ashley-images/heart-note.png"/>
+                <img id="fortune" src="img/ashley-images/fortune.png"/>
+                <img id="movie-tickets" src="img/ashley-images/movie-tickets.png"/>
+                <img id="zoo-ticket1" src="img/ashley-images/zoo-ticket.png"/>
+                <img id="zoo-ticket2" src="img/ashley-images/zoo-ticket.png"/>
+                <img id="polaroid" src="img/ashley-images/polaroid.PNG"/>
+                <img id="keychain" src="img/ashley-images/keychain.PNG"/>
+                <img id="lotus" src="img/ashley-images/lotus.PNG"/>
+                <img id="ticket" src="img/ashley-images/ticket.PNG"/>
             </div>
     <!-- From here down are Lyssa's collage divs! -->
             <div class="lyssa-corkboard corkboard-des">
