--- a/index.html
+++ b/index.html
@@ -141,6 +141,24 @@
             </div>
     <!-- From here down are Lyssa's collage divs! -->
             <div class="lyssa-corkboard corkboard-des">
+                <img id="check2" src="img/lyssa-images/check2.png" />
+                <img id="check1" src="img/lyssa-images/check1.png" />
+                <img id="tea" src="img/lyssa-images/tea.png" />
+                <img id="pop-socket" src="img/lyssa-images/pop-socket.png" />
+                <img id="bandaid2" src="img/lyssa-images/bandaid2.png" />
+                <img id="bandaid1" src="img/lyssa-images/bandaid1.png" />
+                <img id="bandaid4" src="img/lyssa-images/bandaid4.png" />
+                <!-- <img id="bandaid5" src="img/lyssa-images/bandaid5.png" /> -->
+                <img id="bandaid6" src="img/lyssa-images/bandaid6.png" />
+                <!-- <img id="bandaid7" src="img/lyssa-images/bandaid7.png" /> -->
+                <img id="star1" src="img/lyssa-images/star1.png" />
+                <img id="star2" src="img/lyssa-images/star2.png" />
+                <img id="star3" src="img/lyssa-images/star3.png" />
+                <img id="star4" src="img/lyssa-images/star4.png" />
+                <img id="star5" src="img/lyssa-images/star5.png" />
+                <img id="star6" src="img/lyssa-images/star6.png" />
+                <img id="star7" src="img/lyssa-images/star7.png" />
+                <img id="star8" src="img/lyssa-images/star8.png" />
             </div>
     <!-- corkboard shuffle responses button -->
             <div id="shuffle-button-wrapper">
