removed "placeholder" from confession img name and started working on stickersheet (again for the 2nd time lol)

--- a/index.html
+++ b/index.html
@@ -74,16 +74,18 @@
         <div id="bottom-sidebar-wrapper" class="row-wrapper">
             <a href="https://docs.google.com/forms/d/e/1FAIpQLSft2eM6649vLK5VlEwA6BJR3h-Fe0mPaBiGBgRZjSopevvirg/viewform" target="_new">
                 <div id="form-link"> 
-                    <img class="confession" src="img/stickersheet/confession-placeholder.png"/>
+                    <img class="confession" src="img/stickersheet/confess.png"/>
                 </div>
             </a>
-            <!--<div id="sticker-sheet">
-                <div class="sticker" id="sticker1"></div>
-                <div class="sticker" id="sticker2"></div>
-                <div class="sticker" id="sticker3"></div>
-                <div class="sticker" id="sticker4"></div>
+            <div id="sticker-sheet">
                 <img class="sticker-sheet" src="img/stickersheet/stickersheet.png"/>
-            </div>!-->
+                <div id="sticker-reactions">
+                    <img class="sticker" id="sticker-love" src="img/stickersheet/love.png">
+                    <!-- <div class="sticker" id="sticker-happy"></div>
+                    <div class="sticker" id="sticker-sad"></div>
+                    <div class="sticker" id="sticker-angry"></div> -->
+                </div>
+            </div>
         </div>
     </div>
 
