sticker sheet styling

--- a/index.html
+++ b/index.html
@@ -78,13 +78,15 @@
                 </div>
             </a>
             <div id="sticker-sheet">
-                <img class="sticker-sheet" src="img/stickersheet/stickersheet.png"/>
-                <div id="sticker-reactions">
-                    <img class="sticker" id="sticker-love" src="img/stickersheet/love.png">
-                    <!-- <div class="sticker" id="sticker-happy"></div>
-                    <div class="sticker" id="sticker-sad"></div>
-                    <div class="sticker" id="sticker-angry"></div> -->
+                <div id="sticker-reactions-wrapper">
+                    <div id="sticker-reactions">
+                        <div class="sticker"><img id="sticker-love" src="img/stickersheet/love.png" /></div>
+                        <div class="sticker"><img id="sticker-happy" src="img/stickersheet/happy.png"/></div>
+                        <div class="sticker"><img id="sticker-sad" src="img/stickersheet/sad.png"/></div>
+                        <div class="sticker"><img id="sticker-angry" src="img/stickersheet/angry.png"/></div>
+                    </div>
                 </div>
+                <img class="sticker-sheet-img" src="img/stickersheet/stickersheet.png"/>
             </div>
         </div>
     </div>
