--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 	<!-- load jQuery library to make javascript easier (must be above our lab js)-->
 	<script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
 	<!-- Link to javascript file - DEFER waits until all elements are rendered -->
+    <script type="module" src="js/firebase.js"></script>
 	<script type="text/javascript" src="js/code.js" DEFER></script>
 	<script type="text/javascript" src="js/shuffle.js" DEFER></script>
 	<script type="text/javascript" src="js/disk.js" DEFER></script>
