philip has officially lost the battle against API and stickers

--- a/index.html
+++ b/index.html
@@ -77,17 +77,17 @@
                     <img class="confession" src="img/stickersheet/confess.png"/>
                 </div>
             </a>
-            <div id="sticker-sheet">
+            <!-- <div id="sticker-sheet">
                 <div id="sticker-reactions-wrapper">
                     <div id="sticker-reactions">
-                        <div class="sticker"><img id="sticker-love" src="img/stickersheet/love.png" /></div>
+                        <div class="sticker"><img id="sticker-love" src="img/stickersheet/love.png"/></div>
                         <div class="sticker"><img id="sticker-happy" src="img/stickersheet/happy.png"/></div>
                         <div class="sticker"><img id="sticker-sad" src="img/stickersheet/sad.png"/></div>
                         <div class="sticker"><img id="sticker-angry" src="img/stickersheet/angry.png"/></div>
                     </div>
                 </div>
                 <img class="sticker-sheet-img" src="img/stickersheet/stickersheet.png"/>
-            </div>
+            </div> -->
         </div>
     </div>
 
