--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             party. In the dawn of the age of the internet, we had anonymous forums posting personal ads detailing missed 
             connections with beautiful strangers in passing or unrequited loves. Now we are resolved to the instant dopamine 
             and game-like interface of dating apps. Long gone are the days of handwritten love letters shoved in lockers.. 
-            unless…</p>
+            unless...</p>
         <h3>(click anywhere to continue)</h3>
     </div>
 
@@ -48,7 +48,12 @@
                     <p>loading playlist...</p>
                 </div>
                 <div class="current-playlist">
-                    <p>select a record from the left to add music</p>
+                    <p id="current-playlist-starter-text">select a record from the left to add music</p>
+                    <iframe id="grace-iframe" style="border-radius:12px; display: none;;" src="https://open.spotify.com/embed/playlist/2Bex8YgZ74EobhnM1poSVp?utm_source=generator" width="100%" height="80px" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+                    <iframe id="maya-iframe" style="border-radius:12px; display: none;" src="https://open.spotify.com/embed/playlist/1BeBLO59Ji3acFnaFpqbtZ?utm_source=generator" width="100%" height="80px" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+                    <iframe id="philip-iframe" style="border-radius:12px; display: none;" src="https://open.spotify.com/embed/playlist/2TSOAUJOXI1n7HJulpRsaV?utm_source=generator" width="100%" height="80px" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+                    <iframe id="ashley-iframe" style="border-radius:12px; display: none;" src="https://open.spotify.com/embed/playlist/1OVGqSlxvE0d15aaTy8hGy?utm_source=generator" width="100%" height="80px" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+                    <iframe id="lyssa-iframe" style="border-radius:12px; display: none;" src="https://open.spotify.com/embed/playlist/6V4FeoCo1qlBFI9LWyM7dI?utm_source=generator" width="100%" height="80px" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
                 </div>
             </div>
 
