--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                     <p>loading playlist...</p>
                 </div>
                 <div class="current-playlist">
-                    <p>select a record from the left to add music</p>
+                    <p>select a record from the left to get a playlist</p>
                 </div>
             </div>
 
@@ -77,22 +77,13 @@
                     <img class="confession" src="img/stickersheet/confess.png"/>
                 </div>
             </a>
-            <!-- <div id="sticker-sheet">
-                <div id="sticker-reactions-wrapper">
-                    <div id="sticker-reactions">
-                        <div class="sticker"><img id="sticker-love" src="img/stickersheet/love.png"/></div>
-                        <div class="sticker"><img id="sticker-happy" src="img/stickersheet/happy.png"/></div>
-                        <div class="sticker"><img id="sticker-sad" src="img/stickersheet/sad.png"/></div>
-                        <div class="sticker"><img id="sticker-angry" src="img/stickersheet/angry.png"/></div>
-                    </div>
-                </div>
-                <img class="sticker-sheet-img" src="img/stickersheet/stickersheet.png"/>
-            </div> -->
         </div>
     </div>
 
     <div id="corkboard-wrapper">
         <div id="corkboard">
+            <!-- starter post-it in case they get confused on what to do -->
+            <div class="post-it post-it-img1 post-it-loc2">click "get new responses" to get started</div>
     <!-- From here down are Grace's collage divs! -->
             <div class="grace-corkboard corkboard-des current-corkboard-des">
                 <img id="bus-pass" src="img/bus-pass.png" alt="montebello-bus">
